--- a/package.json
+++ b/package.json
@@ -14,11 +14,31 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "styled-components": "^5.3.10",
+    "viem": "^1.10.3",
+    "wagmi": "^1.4.1",
+    "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.21.1",
+    "react-use": "^17.4.0",
+    "react-i18next": "^13.2.2",
+    "react-icons": "^4.10.1",
+    "react-number-format": "^5.3.1",
+    "react-paginate": "^8.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-countdown": "^2.3.5",
+    "numeral": "^2.0.6",
+    "i18next": "^23.4.9",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "@web3modal/standalone": "^2.4.3",
+    "@web3modal/wagmi": "^3.0.1",
+    "bignumber.js": "^9.1.2",
+    "dayjs": "^1.11.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "NODE_ENV=development react-scripts start",
+    "build": "REACT_APP_VERSION=$(node -pe 'require(\"./package.json\").version') REACT_APP_CF_PAGES_BRANCH=$CF_PAGES_BRANCH CI=false GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -39,5 +59,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.6.4",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.9",
+    "@types/numeral": "^2.0.2",
+    "@types/react": "^18.2.21",
+    "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-icons": "^3.0.0",
+    "@types/styled-components": "^5.1.26",
+    "jest": "^29.6.4",
+    "tailwindcss": "^3.3.3",
+    "text-encoding": "^0.7.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "5.2.2"
   }
 }
