--- a/package.json
+++ b/package.json
@@ -10,31 +10,32 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@web3modal/standalone": "^2.4.3",
+    "@web3modal/wagmi": "^3.0.1",
+    "bignumber.js": "^9.1.2",
+    "dayjs": "^1.11.9",
+    "i18next": "^23.4.9",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "styled-components": "^5.3.10",
-    "viem": "^1.10.3",
-    "wagmi": "^1.4.1",
-    "react-router-dom": "^6.15.0",
-    "react-toastify": "^9.1.3",
-    "react-tooltip": "^5.21.1",
-    "react-use": "^17.4.0",
     "react-i18next": "^13.2.2",
     "react-icons": "^4.10.1",
     "react-number-format": "^5.3.1",
     "react-paginate": "^8.2.0",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-countdown": "^2.3.5",
-    "numeral": "^2.0.6",
-    "i18next": "^23.4.9",
-    "i18next-browser-languagedetector": "^7.1.0",
-    "@web3modal/standalone": "^2.4.3",
-    "@web3modal/wagmi": "^3.0.1",
-    "bignumber.js": "^9.1.2",
-    "dayjs": "^1.11.9"
+    "react-router-dom": "^6.15.0",
+    "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
+    "react-tooltip": "^5.21.1",
+    "react-use": "^17.4.0",
+    "styled-components": "^5.3.10",
+    "typescript": "^4.4.2",
+    "viem": "^1.10.3",
+    "wagmi": "^1.4.1",
+    "web-vitals": "^2.1.0",
+    "web3": "^4.5.0"
   },
   "scripts": {
     "start": "NODE_ENV=development react-scripts start",
