--- a/.env.development
+++ b/.env.development
@@ -10,3 +10,6 @@ REACT_APP_CONTRACT_GAME=0xBe232C7B1e05D88e4a12ABe2F3Bd62489a179E90
 REACT_APP_TWITTER_USERNAME=CollmeyerZ41948
 REACT_APP_TWITTER_RETWEET_ID=11111
 REACT_APP_LINK_GG_SHEET=https://script.google.com/macros/s/AKfycbxk-hBdIfpb-L3naDhjI-_MlLUnmwFStR7-JBKndovoGxi0CsPd4mNptZ6QEpLY-qBlTw/exec
+REACT_APP_LINK_TWITTER=https://twitter.com/BlastWarsNFT
+REACT_APP_LINK_DISCORD=https://discord.gg/UMW4wgrkRJ
+REACT_APP_CHAIN=mainnet
