--- a/.env
+++ b/.env
@@ -12,4 +12,4 @@ REACT_APP_TWITTER_RETWEET_ID=11111
 REACT_APP_LINK_GG_SHEET=https://script.google.com/macros/s/AKfycbxk-hBdIfpb-L3naDhjI-_MlLUnmwFStR7-JBKndovoGxi0CsPd4mNptZ6QEpLY-qBlTw/exec
 REACT_APP_LINK_TWITTER=https://twitter.com/BlastWarsNFT
 REACT_APP_LINK_DISCORD=https://discord.gg/UMW4wgrkRJ
-REACT_APP_CHAIN=mainnet
+REACT_APP_CHAIN=testnet
