--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 REACT_APP_VERSION=3
 REACT_APP_PROJECT_ID=826eb56d43a0ad37497553920720f766
 REACT_APP_BLOCK_EXPLORER=https://testnet.blastscan.io/
-REACT_APP_CONTRACT_SALE=0x5fD83D153fBA7a0d91391F7B6C80bf9B2C7871a2
+REACT_APP_CONTRACT_SALE=0x140E1591E3cb52Ccf616D86C33c473F5fa2dc7EC
 REACT_APP_CONTRACT_NFT=0xbFd73C2512C4620F4C2C978Be09C7b665d362022
 REACT_APP_CONTRACT_TOKEN=0x20A463a183F45fF34f7a042b05900262ca995D54
 REACT_APP_CONTRACT_MONSTER_STAKING=0x9Ae533B7b89896857159350b6D912c56D31Ed630
@@ -13,3 +13,7 @@ REACT_APP_LINK_GG_SHEET=https://script.google.com/macros/s/AKfycbxk-hBdIfpb-L3na
 REACT_APP_LINK_TWITTER=https://twitter.com/BlastWarsNFT
 REACT_APP_LINK_DISCORD=https://discord.gg/UMW4wgrkRJ
 REACT_APP_CHAIN=testnet
+REACT_APP_MAX_SUPPLY=1500
+REACT_APP_MAX_SUPPLY_WHITELIST=500
+REACT_APP_PRICE_WHITELIST=0.02
+REACT_APP_PRICE_PUBLIC=0.03
